test/invalid/ClassNameDoesntStartWithCapital/ClassNameDoesntStartWithCapital.plume
/**
 * comecar ou nao comecar com maiuscula eh uma questao de convencao,
 * nao faz parte da definicao da nossa linguagem (vv)
 * @author 35237, Marcos Vasco
 */
class biconditional extends BinaryLogicalOperation is
  
  method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == false || val2 == false then true
    else if val1 == true || val2 == true then true
    else false